style.css
/* blue : 111d4a */
/* lavendar : cfcfea */
/* green: f0ffce */



:root {
    --purple: #adadd2;
    --green: #a9e7b9;
    --grey: #CCCCCC;
    --shadow-color: 5px 5px 5px #d6d6d6;
}
* {
}

.container {
    display:grid;
    grid-template-columns: minmax(min-content,1fr) 4fr;
    gap: 16px;  
}

.sidebar {
    height: 100vh;
    background-color: var(--purple);
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;

    color:white;
    font-size: large;
    font-weight: bold;

    box-shadow: var(--shadow-color);
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    gap: 2em;

}

.sidebar .logo {
    text-align: left;
}

.sidebar > * {
    padding: 10px;
    flex: 0;
    width: 100%;
}

.top-tabs > *, .bottom-tabs > * {
    display: flex;
    justify-content: flex-start;
    gap: 1em;
}


.profile-icon {
    border-style: solid;
    border-color: var(--green);
    border-radius: 50%;
    border-width: 5px;
    aspect-ratio: 1;            
    max-width: 4em;
}


.content {
    display: grid;
    grid-template-rows: 150px 1fr;
    gap: 10px;
}

.top-header {
    display: grid;
    grid-template: 50px 70px / 1fr 1fr;   
    padding: 1em;

    border-style: solid;
    border-width: 3px;
    border-color: var(--grey);

    border-radius: 5px;
    box-shadow: var(--shadow-color)
}

.search-bar{
    display: flex;
}

.search-bar input {
    flex: 1;
    border-style:solid;
    border-color: black;
    border-radius: 2em;
    padding: 2px;
}

.trending, .announcements {
    border-style: solid;
    border-width: 3px;
    border-color: var(--grey);
    border-radius: 5px;
    box-shadow: var(--shadow-color);

    display: grid;
    grid-template-rows: 1em 1fr;
    grid-template-columns: 1fr;

    gap: 1em;
    padding-top: .5em;

    
    align-items: center;
}

.announcements h2, .trending h2 {
    background-color: var(--grey);
    text-align: center;
    
}

.search-bar, .profile-bar, .functions, .profile-hero {
    display: flex;
    align-items: center;
    gap: 1em;
}

.profile-bar {
    justify-content: flex-end;
    gap: 2em;
    padding: 1em;

}


.functions {
    justify-content: flex-end;
    gap: 1em;
}

.functions button {
    width: 5em;
    background-color: var(--purple);
    color: white;
    border-radius: 2em;
    border-style: none;
    padding: .5em;
}
.board {
    background-color: rgb(255, 255, 255);
    padding: 8px;
    gap: 8px;
    display: grid;
    grid-template-columns: 4fr 1fr;
    height: 100%;
}


.right-sidebar {
    display: grid;
    grid-template-rows: 1fr 1fr;
    gap: 20px;
    padding: 1em;
}

.cards {
    background-color: white;
    display: grid;
    overflow: -moz-hidden-unscrollable;
    gap: 16px;
    padding: 12px;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1em 1fr 1fr 1fr;

    align-items: center;
    justify-content: center;
}

.cards .label {
    grid-column: 1 / 3;
    
}

.card {
    height: 100%;
    border-radius: 5px;
    border-style: solid;
    border-width: 4px;
    border-left-width:1.5em;
    border-color: var(--green);
    box-shadow: var(--shadow-color);
    padding: 8px;
}

